--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 <body>
   <h1>Сәлем, әлем!</h1>
   <p>Бұл менің GitHub Pages арқылы жасалған алғашқы сайтым ✨</p>
+  <h1>Сәлем, әлем!</h1>
+<p>Бұл менің алғашқы GitHub сайтім 🎉</p>
+<img src="https://picsum.photos/400/200" alt="Random image" />
+
 </body>
 </html>
