--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="kk">
 <head>
   <meta charset="UTF-8">
-  <title>Танысу және Шабыт</title>
+  <title>Askhat prince</title>
   <style>
     body {
       margin: 0;
